--- a/pages/673.html
+++ b/pages/673.html
@@ -293,13 +293,19 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8559/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8559/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="https://ncatlab.org/nlab/author/David%20Roberts" title="Overview of nLab pages which David Roberts has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
+</div>
+
+<div>
+  <p style="color: red">
+    The nLab and nForum are expected to be down for several hour periods between 08:00 UTC on the 11th of August and 04:00 UTC on the 12th of August, due to maintenance at Carnegie Mellon University which will lead to loss of power where the nLab server resides. Apologies for the inconvenience.
+  </p>
 </div>
 
 
@@ -325,7 +331,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>The construction of formal anafunctors</em> (Coming soon!)</p>
+<p><em>The construction of formal anafunctors</em> (2018) doi:<a href='https://doi.org/10.25909/5b6cfd1a73e55'>10.25909/5b6cfd1a73e55</a></p>
 </li>
 
 <li>
@@ -333,7 +339,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><em>Class forcing and topos theory</em>, notes from my 2015 talk at IHES, doi:<a href='https://doi.org/10.4225/55/5b2252e3092af'>10.4225/55/5b2252e3092af</a></p>
+<p><em>Class forcing and topos theory</em> (2018) notes from my 2015 talk at IHES, doi:<a href='https://doi.org/10.4225/55/5b2252e3092af'>10.4225/55/5b2252e3092af</a></p>
 </li>
 </ul>
 
@@ -406,7 +412,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_b775d37cf4fc37a564113628af30637572fc9e39_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_943708d4045edcd747f01bbdfed5b5e93f8c976b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -524,14 +530,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August  8, 2018 at 07:30:47.
+  Last revised on August  9, 2018 at 22:55:13.
   See the <a href="https://ncatlab.org/nlab/history/David Roberts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/156" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(156 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/157" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(157 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/David Roberts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
