--- a/pages/18976.html
+++ b/pages/18976.html
@@ -3,15 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Matériaux pour l’histoire des mathématiques au XXe siècle in nLab
+      Matériaux pour l&#39;histoire des mathématiques au XXe siècle in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -283,23 +283,28 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Matériaux pour l’histoire des mathématiques au XXe siècle
+      Matériaux pour l&#39;histoire des mathématiques au XXe siècle
   </h1>
 
 
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8838/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
+</div>
+
+<div>
+  <p style="color: red">
+    The nLab and nForum are expected to be down for several hour periods between 08:00 UTC on the 11th of August and 04:00 UTC on the 12th of August, due to maintenance at Carnegie Mellon University which will lead to loss of power where the nLab server resides. Apologies for the inconvenience.
+  </p>
 </div>
 
 
@@ -308,7 +313,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
+      <ul>
 <li>Michele Audin (editor), <em><a class='existingWikiWord' href='/nlab/show/Mat%C3%A9riaux+pour+l%E2%80%99histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle'>Matériaux pour l’histoire des mathématiques au XXe siècle</a></em> - Actes du colloque à la mémoire de Jean Dieudonné (Nice 1996) Séminaires &amp; Congrès. Numèro 3. Paris (Socièté Mathématique de France). 1998. 283 pp.</li>
 </ul>
 
@@ -364,22 +369,23 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February  3, 2018 09:42:36 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.28.4)
+  <p>
+  Last revised on August 10, 2018 at 16:03:24.
+  See the <a href="https://ncatlab.org/nlab/history/Matériaux pour l&#39;histoire des mathématiques au XXe siècle" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mat%C3%A9riaux+pour+l%E2%80%99histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Matériaux pour l&#39;histoire des mathématiques au XXe siècle/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
-    <a href="/nlab/print/Mat%C3%A9riaux+pour+l%E2%80%99histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
-    <a href="/nlab/tex/Mat%C3%A9riaux+pour+l%E2%80%99histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" id="view_tex" rel="nofollow">TeX</a>
+    | Views:
+    <a href="/nlab/print/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/source/Mat%C3%A9riaux+pour+l%E2%80%99histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/tex/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" id="view_tex" rel="nofollow">TeX</a>
+    |
+    <a href="/nlab/source/Mat%C3%A9riaux+pour+l%27histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
