--- a/pages/10959.html
+++ b/pages/10959.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <blockquote>
+      <blockquote>
 <p>This entry is about the concept in <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a>. For the concept of the same name in <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> see at <em><a class='existingWikiWord' href='/nlab/show/category'>category</a></em>.</p>
 </blockquote>
 
@@ -318,10 +317,7 @@ margin-left: 0em;
 
 <h4 id='philosophy'>Philosophy</h4>
 
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a></strong></p>
-
-<ul>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a></strong></p><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/ontology'>ontology</a></p>
 
@@ -335,23 +331,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul>
-
-<h3 id='schools'>Schools</h3>
-
-<ul>
+</ul><h3 id='schools'>Schools</h3><ul>
 <li><a class='existingWikiWord' href='/nlab/show/objective+idealism'>objective idealism</a></li>
-</ul>
-
-<h3 id='of_mathematics'>Of mathematics</h3>
-
-<ul>
+</ul><h3 id='of_mathematics'>Of mathematics</h3><ul>
 <li><a class='existingWikiWord' href='/nlab/show/philosophy+of+mathematics'>philosophy of mathematics</a></li>
-</ul>
-
-<h3 id='of_physics'>Of physics</h3>
-
-<ul>
+</ul><h3 id='of_physics'>Of physics</h3><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/natural+philosophy'>natural philosophy</a></p>
 </li>
@@ -359,8 +343,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/philosophy+of+physics'>philosophy of physics</a></p>
 </li>
-</ul>
-<div>
+</ul><div>
 <p>
   <a href='/nlab/edit/philosophy+-+contents'>Edit this sidebar</a>
 </p>
@@ -369,18 +352,31 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a><ul><li><a href='#aristotles_categories'>Aristotle’s categories</a></li><li><a href='#kants_categories_of_pure_understanding'>Kant’s categories of pure understanding</a></li><li><a href='#CategoryOfBeing'>Hegel’s categories of being</a></li><li><a href='#LawvereCoRfletiveCategories'>Lawvere’s (co-)reflective categories</a></li></ul></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<ul>
+<li><a href='#aristotles_categories'>Aristotle’s categories</a></li>
+<li><a href='#kants_categories_of_pure_understanding'>Kant’s categories of pure understanding</a></li>
+<li><a href='#CategoryOfBeing'>Hegel’s categories of being</a></li>
+<li><a href='#LawvereCoRfletiveCategories'>Lawvere’s (co-)reflective categories</a></li>
+</ul>
+<li><a href='#related_entries'>Related entries</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id='idea'>Idea</h2>
 
 <p>A philosophical system of categories looks to provide a list of the basic kinds of entity. Often such systems derive from the linguistic form of the judgements we make about the world.</p>
 
-<p><a class='existingWikiWord' href='/nlab/show/Per+Martin-L%C3%B6f'>Per Martin-Löf</a> (<a href='#Martin-Löf93'>1993</a>) sees a strong affinity with his idea of <a class='existingWikiWord' href='/nlab/show/type'>types</a>:</p>
+<p><a class='existingWikiWord' href='/nlab/show/Per+Martin-L%C3%B6f'>Per Martin-Löf</a> (<a href='#Martin-L&amp;#246;f93'>1993</a>) sees a strong affinity with his idea of <a class='existingWikiWord' href='/nlab/show/types'>types</a>:</p>
 
 <blockquote>
 <p>Given how basic the very idea of type is, it is of course unthinkable that there shouldn’t be a word already in the tradition for what we here call types. You will all know that the traditional word for what I here call type is category. It was introduced by Aristotle and heavily used by Kant. I will show that the traditional use of the word coincides with the way I am using it here. What I call here the doctrine of types, the idea that an object is always an object of a certain type, really goes back to Aristotle.</p>
 </blockquote>
 
-<p>Notice that from the perspective of <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> then <a class='existingWikiWord' href='/nlab/show/type'>types</a> are <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>infinity-groupoids</a>, hence kinds of (<a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher</a>) <a class='existingWikiWord' href='/nlab/show/category'>categories</a> in the sense of <a href='category#EilenbergMacLane45'>Eilenberg-MacLane 45</a>. For more on this see <a href='#LawvereCoRfletiveCategories'>below</a> and at <em><a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a></em>.</p>
+<p>Notice that from the perspective of <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> then <a class='existingWikiWord' href='/nlab/show/types'>types</a> are <a class='existingWikiWord' href='/nlab/show/infinity-groupoids'>infinity-groupoids</a>, hence kinds of (<a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher</a>) <a class='existingWikiWord' href='/nlab/show/categories'>categories</a> in the sense of <a href='category#EilenbergMacLane45'>Eilenberg-MacLane 45</a>. For more on this see <a href='#LawvereCoRfletiveCategories'>below</a> and at <em><a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a></em>.</p>
 
 <h3 id='aristotles_categories'>Aristotle’s categories</h3>
 
@@ -414,11 +410,11 @@ margin-left: 0em;
 <p>In the Transcendental Analytic, the most crucial as well as the most difficult part of <a href='#Kant1781'>Kant 1781 “The critique of pure reason”</a>, he maintained that physics is a priori and synthetic because in its ordering of experience it uses concepts of a special sort. These concepts—“categories,” he called them—are not so much read out of experience as read into it and, hence, are a priori, or pure, as opposed to empirical. But they differ from empirical concepts in something more than their origin: their whole role in knowledge is different. For, whereas empirical concepts serve to correlate particular experiences and so to bring out in a detailed way how experience is ordered, the categories have the function of prescribing the general form that this detailed order must take. They belong, as it were, to the very framework of knowledge. But although they are indispensable for objective knowledge, the sole knowledge that the categories can yield is of objects of possible experience; they yield valid and real knowledge only when they are ordering what is given through sense in space and time. (from Encyclopedia Britannica)</p>
 </blockquote>
 
-<p>According to <a class='existingWikiWord' href='/nlab/show/Immanuel+Kant'>Kant</a> the <em>categories of pure understanding</em> are (forming what is known as “the table of categories”):</p>
+<p>According to <a class='existingWikiWord' href='/nlab/show/Kant'>Kant</a> the <em>categories of pure understanding</em> are (forming what is known as “the table of categories”):</p>
 
 <ol>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/space+and+quantity'>quantity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quantity'>quantity</a></p>
 
 <ul>
 <li>
@@ -436,7 +432,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quality+type'>quality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quality'>quality</a></p>
 
 <ul>
 <li>
@@ -476,15 +472,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/necessity+and+possibility'>possibility</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/possibility'>possibility</a></p>
 </li>
 
 <li>
-<p>actuality (_Wirklichkeit_)</p>
+<p>actuality (<em>Wirklichkeit</em>)</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/necessity+and+possibility'>necessity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/necessity'>necessity</a></p>
 </li>
 </ul>
 </li>
@@ -492,7 +488,7 @@ margin-left: 0em;
 
 <h3 id='CategoryOfBeing'>Hegel’s categories of being</h3>
 
-<p>According to <a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>Hegel</a> there is refinement of the table, both by adding more categories (and maybe by omitting some?) and by claiming to relate them more systematically by a system of <a class='existingWikiWord' href='/nlab/show/adjoint+modality'>unity of opposites</a> and of <a class='existingWikiWord' href='/nlab/show/Aufhebung'>sublation</a> of these oppositions. See at <em><a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a></em> for more on this. Hegel calls the categories the <em>determinations of being</em>.</p>
+<p>According to <a class='existingWikiWord' href='/nlab/show/Hegel'>Hegel</a> there is refinement of the table, both by adding more categories (and maybe by omitting some?) and by claiming to relate them more systematically by a system of <a class='existingWikiWord' href='/nlab/show/unity+of+opposites'>unity of opposites</a> and of <a class='existingWikiWord' href='/nlab/show/Aufhebung'>sublation</a> of these oppositions. See at <em><a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a></em> for more on this. Hegel calls the categories the <em>determinations of being</em>.</p>
 
 <p>According to <a href='Science+of+Logic#864'>WdL §864</a>:</p>
 
@@ -504,7 +500,7 @@ margin-left: 0em;
 
 <h3 id='LawvereCoRfletiveCategories'>Lawvere’s (co-)reflective categories</h3>
 
-<p>According to <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Lawvere</a> the system of categories of Hegel <a href='#CategoryOfBeing'>above</a> are usefully formalized in <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a> (“<a class='existingWikiWord' href='/nlab/show/objective+and+subjective+logic'>objective logic</a>”) as systems of (co-)<a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategories</a> (in the sense of <a class='existingWikiWord' href='/nlab/show/category'>category</a> in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>) of some ambient <a class='existingWikiWord' href='/nlab/show/topos'>topos</a>. See also at <em><a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a></em> for more on this.</p>
+<p>According to <a class='existingWikiWord' href='/nlab/show/Lawvere'>Lawvere</a> the system of categories of Hegel <a href='#CategoryOfBeing'>above</a> are usefully formalized in <a class='existingWikiWord' href='/nlab/show/categorical+logic'>categorical logic</a> (“<a class='existingWikiWord' href='/nlab/show/objective+logic'>objective logic</a>”) as systems of (co-)<a class='existingWikiWord' href='/nlab/show/reflective+subcategories'>reflective subcategories</a> (in the sense of <a class='existingWikiWord' href='/nlab/show/category'>category</a> in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>) of some ambient <a class='existingWikiWord' href='/nlab/show/topos'>topos</a>. See also at <em><a class='existingWikiWord' href='/nlab/show/Science+of+Logic'>Science of Logic</a></em> for more on this.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -516,7 +512,7 @@ margin-left: 0em;
 
 <ul>
 <li id='Kant1781'>
-<p><a class='existingWikiWord' href='/nlab/show/Immanuel+Kant'>Kant</a>, <em><a class='existingWikiWord' href='/nlab/show/Critique+of+Pure+Reason'>Critique of Pure Reason</a></em>, 1781</p>
+<p><a class='existingWikiWord' href='/nlab/show/Kant'>Kant</a>, <em><a class='existingWikiWord' href='/nlab/show/Critique+of+Pure+Reason'>Critique of Pure Reason</a></em>, 1781</p>
 </li>
 
 <li id='AristCat'>
@@ -531,7 +527,7 @@ margin-left: 0em;
 <p>Paul Studtmann, <em><a href='https://plato.stanford.edu/entries/aristotle-categories/'>SEP: Aristotle’s Categories</a></em>, Stanford Encyclopedia of Philosophy, 2013.</p>
 </li>
 
-<li id='Martin-Löf93'>
+<li id='Martin-L&amp;#246;f93'>
 <p><a class='existingWikiWord' href='/nlab/show/Per+Martin-L%C3%B6f'>Per Martin-Löf</a>, <em>Philosophical aspects of intuitionistic type theory</em>, unpublished lectures given at the Faculteit der Wijsbegeerte, Rijksuniversiteit, Leiden, Sept-Dec 1993, (Cited in P. Boldini, <em>Des catégories aux types : un itinéraire en mathématiques appliquées</em>, <a href='http://pboldini.free.fr/Papers/mathmu.pdf'>pdf</a>)</p>
 </li>
 
@@ -550,19 +546,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May  1, 2017 09:36:31 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  <p>
+  Last revised on August 12, 2018 at 06:42:38.
+  See the <a href="https://ncatlab.org/nlab/history/category (philosophy)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+%28philosophy%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+%28philosophy%29/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/category+%28philosophy%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+%28philosophy%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/category+%28philosophy%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+%28philosophy%29/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/category+%28philosophy%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+%28philosophy%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/category (philosophy)/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/category+%28philosophy%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/category+%28philosophy%29" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/category+%28philosophy%29" id="view_source" rel="nofollow">Source</a>
