--- a/pages/1788.html
+++ b/pages/1788.html
@@ -8,13 +8,14 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
-  
- 
+
+
   <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534103919" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
-    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
-      color: #008B26; 
+    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
+      color: #008B26;
     }
     a:visited.existingWikiWord {
       color: #005c19;
@@ -23,7 +24,7 @@
     
   </style>
   
-  <style type="text/css"><!--/*--><![CDATA[/*><!--*/    
+  <style type="text/css"><!--/*--><![CDATA[/*><!--*/
     .toc ul {margin: 0; padding: 0;}
 .toc ul ul {margin: 0; padding: 0 0 0 10px;}
 .toc li > p {margin: 0}
@@ -309,9 +310,9 @@ margin-left: 0em;
 
 <p><strong>higher super <a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a> preserves <a class='existingWikiWord' href='/nlab/show/homotopy+fiber+sequences'>homotopy fiber sequences</a></strong></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_d52adb2f9ca64653169991504b9e245c7bf81e2a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAA}</annotation></semantics></math>hence in particular <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_d913a3488c506b9579fff06aace76312c450befd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAA}</annotation></semantics></math>hence in particular <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_d52adb2f9ca64653169991504b9e245c7bf81e2a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_d52adb2f9ca64653169991504b9e245c7bf81e2a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>−</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>−</mo><mi>Super</mi><msub><mi>L</mi> <mn>∞</mn></msub><mi>Algebras</mi></mtd> <mtd></mtd> <mtd><mi>SuperSpaces</mi></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mover><mi>𝔤</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mi>𝔤</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mi>B</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd> <mtd><mphantom><mi>AAAA</mi></mphantom><mover><mo>↦</mo><mrow><mi>Spec</mi><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>CE</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow></mover><mphantom><mi>AAAA</mi></mphantom></mtd> <mtd><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>G</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<p><math class='maruku-mathml' display='inline' id='mathml_d913a3488c506b9579fff06aace76312c450befd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_d913a3488c506b9579fff06aace76312c450befd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>−</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>−</mo><mi>Super</mi><msub><mi>L</mi> <mn>∞</mn></msub><mi>Algebras</mi></mtd> <mtd></mtd> <mtd><mi>SuperSpaces</mi></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mover><mi>𝔤</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mi>𝔤</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mi>B</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd> <mtd><mphantom><mi>AAAA</mi></mphantom><mover><mo>↦</mo><mrow><mi>Spec</mi><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>CE</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow></mover><mphantom><mi>AAAA</mi></mphantom></mtd> <mtd><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>G</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{----
   Super L_\infty Algebras &amp;&amp; SuperSpaces
   \\
@@ -350,7 +351,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 12, 2018 at 15:59:42.
+  Last revised on August 12, 2018 at 16:05:20.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
