--- a/pages/1788.html
+++ b/pages/1788.html
@@ -306,59 +306,43 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>This implies in particular that</p>
+      <p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><strong>higher super <a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a> preserves <a class='existingWikiWord' href='/nlab/show/homotopy+fiber+sequences'>homotopy fiber sequences</a></strong></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_d913a3488c506b9579fff06aace76312c450befd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAA}</annotation></semantics></math>hence in particular <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_d913a3488c506b9579fff06aace76312c450befd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_d913a3488c506b9579fff06aace76312c450befd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>−</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>−</mo><mi>Super</mi><msub><mi>L</mi> <mn>∞</mn></msub><mi>Algebras</mi></mtd> <mtd></mtd> <mtd><mi>SuperSpaces</mi></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mover><mi>𝔤</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mi>𝔤</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mi>B</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd> <mtd><mphantom><mi>AAAA</mi></mphantom><mover><mo>↦</mo><mrow><mi>Spec</mi><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>CE</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow></mover><mphantom><mi>AAAA</mi></mphantom></mtd> <mtd><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>G</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \array{----
-  Super L_\infty Algebras &amp;&amp; SuperSpaces
-  \\
-  \array{
-    \widehat{\mathfrak{g}}
-    \\
-    {}^{\mathllap{hofib(\mu_{p+2})}}\Big\downarrow
-    \\
-    \mathfrak{g}
-    &amp;\overset{ \mu_{p+2} }{\longrightarrow}&amp;
-    B^{p+1} \mathbb{R}
-  }
-  &amp;
-  \phantom{AAAA}
-  \overset{ Spec\big(CE(-)\big) }{\mapsto}
-  \phantom{AAAA}
-  &amp;
-  \array{
-    \mathbf{B} \widehat{G}
-    \\
-    {}^{\mathllap{hofib(\mathbf{c}_{p+2})}}\Big\downarrow
-    \\
-    \mathbf{B}G
-    &amp;\overset{ \mathbf{c}_{p+2} }{\longrightarrow}&amp;
-    \mathbf{B}^{p+2} \mathbb{R}
-  }
-  }
-</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
+<p>Example – <strong><a class='existingWikiWord' href='/nlab/show/model+structure+on+dgc-superalgebras'>dgc-algebraic super homotopy theory</a></strong></p>
 
-<p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAA}</annotation></semantics></math>The <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/real+number'>real</a> <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+superalgebras'>differential graded-commutative superalgebras</a></p>
 
-<p><span class='mathematics'>Test</span></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAA}</annotation></semantics></math>carries a “projective” <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> <math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>dgcSuperAlg</mi> <mi>proj</mi></msub></mrow><annotation encoding='application/x-tex'>dgcSuperAlg_{proj}</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAA}</annotation></semantics></math>with <a class='existingWikiWord' href='/nlab/show/path+space+objects'>path space objects</a> given by <a class='existingWikiWord' href='/nlab/show/tensor+product+of+algebras'>tensor product of algebras</a> with <math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>Ω</mi> <mi>poly</mi> <mo>•</mo></msubsup><mo maxsize='1.2em' minsize='1.2em'>(</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow><annotation encoding='application/x-tex'>\Omega^\bullet_{poly}\big([0,1]\big)</annotation></semantics></math></p>
+
+<p>(<a href='https://ncatlab.org/nlab/show/rational%20homotopy%20theory#BousfieldGugenheim76'>Bousfield-Gugenheim 76</a>, <a href='https://ncatlab.org/nlab/show/model+structure+on+differential+graded-commutative+superalgebras#CarchediRoytenberg12'>Carchedi-Roytenberg 12</a>)</p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_b761d3d991b5b142e6f8b4da4a84f5f1cfd66ddd_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 12, 2018 at 16:05:20.
+  Last revised on August 12, 2018 at 18:22:47.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1640" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1640 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1641" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1641 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
