--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -306,14 +306,12 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><a class='existingWikiWord' href='/nlab/show/C%2A-algebra'>C<em>-algebra</em></a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> B</p>
+      <p><a class='existingWikiWord' href='/nlab/show/C%2A-algebra'>C*-algebra</a></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 13, 2018 at 13:49:37.
+  Last revised on August 13, 2018 at 14:19:32.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
